# ethereum-pk-miner

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
benches/: xorfilters.rs
data/: query.py  to_check
src/: db.rs  generator.rs  lib.rs  main.rs  statistics.rs  utils.rs  wordlist.rs
src/runner/: miner.rs  mod.rs  prepare.rs
